--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,20 @@
 
     <ImageView
         android:id="@+id/image_weather_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="@dimen/size_large"
+        android:layout_height="@dimen/size_large" />
 
     <TextView
         android:id="@+id/text_degree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_big"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp" />
+        android:textSize="@dimen/text_size_small" />
 
 </LinearLayout>
